# hSnake

./: CHANGELOG.md  LICENSE  hsnake.cabal
app/: Main.hs  Main2.hs
src/: Snake.hs
