cabal-version:      3.4
name:               hsnake
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Gabriel Kabbe
maintainer:         gabriel.kabbe@mail.de

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable hsnake
    main-is:          Main.hs
    ghc-options: -threaded

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      brick,
                      vty,
                      microlens-th,
                      microlens,
                      text,
                      text-zipper
    hs-source-dirs:   app
    default-language: Haskell2010
